--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[workspace]
+resolver = "3"
+members = [
+    "crates/ode",
+]
+
 [package]
 name = "differential-equations"
 version = "0.1.0"
@@ -27,19 +33,19 @@ include = [
 
 [features]
 default = []
-polars = ["dep:polars"]
+
+full = [
+    "polars"
+]
+
+polars = ["ode/polars"]
 
 [dependencies]
+# Linear algebra
 nalgebra = "0.33.2"
-polars = { version = "0.46.0", optional = true }
 
-[dev-dependencies]
-criterion = { version = "0.5.1", features = ["html_reports"] }
-
-[[bench]]
-name = "ode"
-harness = false
-path = "benches/ode/main.rs"
+# Differential equations sub-crates
+ode = { path = "crates/ode" }
 
 # Ordinary Differential Equation (ODE) examples
 [[example]]
@@ -81,4 +87,3 @@ path = "examples/ode/09_matrix_system/main.rs"
 [[example]]
 name = "ode_10_custom_solout"
 path = "examples/ode/10_custom_solout/main.rs"
-
