--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,3 @@
-[workspace]
-resolver = "3"
-members = [ 
-    "crates/ode",
-]
-
 [package]
 name = "differential-equations"
 version = "0.1.1"
@@ -38,14 +32,16 @@ full = [
     "polars"
 ]
 
-polars = ["ode/polars"]
+polars = ["dep:polars"]
 
 [dependencies]
 # Linear algebra
 nalgebra = "0.33.2"
+polars = { version = "0.46.0", optional = true }
 
-# Differential equations sub-crates
-ode = { version = "0.1.0", path = "crates/ode" }
+[dev-dependencies]
+# For testing and benchmarking
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 # Ordinary Differential Equation (ODE) examples
 [[example]]
@@ -87,3 +83,8 @@ path = "examples/ode/09_matrix_ode/main.rs"
 [[example]]
 name = "ode_10_custom_solout"
 path = "examples/ode/10_custom_solout/main.rs"
+
+[[bench]]
+name = "ode_bench"
+harness = false
+path = "benches/ode/main.rs"
