--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ nalgebra = "0.33.2" # Linear algebra vector and matrix types
 num-complex = "0.4.6" # Complex numbers
 
 # Derive macros for differential equations crate
-differential-equations-derive = { path = "./differential-equations-derive" }
+differential-equations-derive = { version = "0.1.0", path = "./differential-equations-derive" }
 
 # Optional features
 polars = { version = "0.46.0", optional = true }
