--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,23 +26,24 @@ include = [
 ]
 
 [features]
-default = []
+default = ["derive"]
 
+full = [
+    "derive",
+    "polars"
+]
+
+derive = ["dep:differential-equations-derive"]
 polars = ["dep:polars"]
 
 [dependencies]
 nalgebra = "0.33.2" # Linear algebra vector and matrix types
 num-complex = "0.4.6" # Complex numbers
-
-# Derive macros for differential equations crate
-differential-equations-derive = { version = "0.1.0", path = "./derive" }
-
-# Optional features
-polars = { version = "0.46.0", optional = true }
+differential-equations-derive = { version = "0.1.0", path = "./derive", optional = true } # Derives State trait on structs
+polars = { version = "0.46.0", optional = true } # DataFrame integration for the solution
 
 [dev-dependencies]
-# For testing and benchmarking
-criterion = { version = "0.5.1", features = ["html_reports"] }
+criterion = { version = "0.5.1", features = ["html_reports"] } # Benchmarking library
 
 # Ordinary Differential Equation (ODE) examples
 [[example]]
