--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,20 +26,20 @@ include = [
 ]
 
 [features]
-default = ["derive"]
+default = []
 
 full = [
-    "derive",
     "polars"
 ]
 
-derive = ["dep:differential-equations-derive"]
 polars = ["dep:polars"]
 
 [dependencies]
-nalgebra = "0.33.2" # Linear algebra vector and matrix types
-num-complex = "0.4.6" # Complex numbers
-differential-equations-derive = { version = "0.1.1", path = "./derive", optional = true } # Derives State trait on structs
+nalgebra = "0.33.2" # Linear algebra library for matrix operations
+num-complex = "0.4.6" # Complex number support
+differential-equations-derive = { path = "derive", version = "0.1.1" } # Derive macros for State trait
+#"0.1.1" # Derives State trait on structs
+
 polars = { version = "0.46.0", optional = true } # DataFrame integration for the solution
 
 [dev-dependencies]
