--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,7 @@ polars = ["dep:polars"]
 [dependencies]
 nalgebra = "0.33.2" # Linear algebra library for matrix operations
 num-complex = "0.4.6" # Complex number support
-differential-equations-derive = { path = "derive", version = "0.1.1" } # Derive macros for State trait
-#"0.1.1" # Derives State trait on structs
+differential-equations-derive = "0.1.1" # Derives State trait on structs
 
 polars = { version = "0.46.0", optional = true } # DataFrame integration for the solution
 
