Squashed commit of the following:
commit e00e0b21a22fe2ff44a587d411ce875fa5ab5ffd
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 19:32:52 2025 -0500

    Add tests

commit 0245f90ee2354712e001e1f36c018bb5dcddef90
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 19:02:54 2025 -0500

    Add dde::DOPRI5 and aliases in prelude

commit 270028fcb8bee3889988ec566756667a213df2cb
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 18:29:46 2025 -0500

    move h_init out for reuse

commit 98fd5cbd5fed169de2f311ba069654873bee6132
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 18:14:14 2025 -0500

    Update README.md

commit cd48f18482c795e21d39a49f814fdd8e252961e5
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 18:12:54 2025 -0500

    Create BS23 Method for DDEs

commit 44cf02bb76b1384c02a196406547279082b1aa37
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 16:03:02 2025 -0500

    Update repri5.rs

commit d707c2335fe29681097991ce6c89780e4a519c02
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 01:33:51 2025 -0500

    Add cont history pruning

commit c329e7eba6ac99f9746afc9b79e50b5b21c5ffef
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 01:18:54 2025 -0500

    Update main.rs

commit 76078e2a3fbb7963a976d07de665271c3bcc4c5b
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Tue May 6 01:17:41 2025 -0500

    Use method of steps

commit 96410e70d2f40b8862beb47ca1bdda5674043f01
Author: Ryan-D-Gast <ryguy10202003@gmail.com>
Date:   Mon May 5 20:11:30 2025 -0500

    initial work on prototype dde

    Needs reworked to use Method of Steps.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,8 +104,17 @@ path = "examples/sde/02_heston_model/main.rs"
 name = "sde_03_ornstein_uhlenbeck"
 path = "examples/sde/03_ornstein_uhlenbeck/main.rs"
 
+# Delay Differential Equation (DDE) examples
+[[example]]
+name = "dde_01_mackey_glass"
+path = "examples/dde/01_mackey_glass/main.rs"
+
+[[example]]
+name = "dde_02_breast_cancer_model"
+path = "examples/dde/02_breast_cancer_model/main.rs"
+
 # Benchmarks
 [[bench]]
-name = "ode_bench"
+name = "ode_solver_benchmarks"
 harness = false
-path = "benches/ode/main.rs"
+path = "benches/main.rs"
