--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,11 @@ full = [
 polars = ["dep:polars"]
 
 [dependencies]
-nalgebra = "0.33.2" # Linear algebra library for matrix operations
-num-complex = "0.4.6" # Complex number support
+nalgebra = "^0.33.2" # Linear algebra library for matrix operations
+num-complex = "^0.4.6" # Complex number support
 differential-equations-derive = "0.1.1" # Derives State trait on structs
 
-polars = { version = "0.46.0", optional = true } # DataFrame integration for the solution
+polars = { version = "^0.46.0", optional = true } # DataFrame integration for the solution
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] } # Benchmarking library
