--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,21 +27,17 @@ include = [
 
 [features]
 default = []
-
-full = [
-    "polars"
-]
-
 polars = ["dep:polars"]
 
 [dependencies]
 nalgebra = "^0.33.2" # Linear algebra library for matrix operations
 num-complex = "^0.4.6" # Complex number support
 differential-equations-derive = "0.1.1" # Derives State trait on structs
-
-polars = { version = "^0.46.0", optional = true } # DataFrame integration for the solution
+polars = { version = "^0.47.1", optional = true } # DataFrame integration for the solution
 
 [dev-dependencies]
+differential-equations = { path = ".", features = ["polars"] } # Enable features for testing
+plotlars = "0.9.3"
 criterion = { version = "0.5.1", features = ["html_reports"] } # Benchmarking library
 rand = "0.9.0" # Random number generation for SDE examples
 rand_distr = "0.5.1" # Random distributions for SDE examples
