Add Differential-Algebraic Equation (DAE) support
Introduces a new DAE module with trait, problem struct, solver, and numerical method abstractions. Adds example DAE problems (amplifier and Robertson) and updates documentation and Cargo.toml to include DAE examples. Also updates the Brusselator ODE example to use Radau5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,15 @@ path = "examples/ode/11_schrodinger/main.rs"
 name = "ode_12_brusselator"
 path = "examples/ode/12_brusselator/main.rs"
 
+# Differential-Algebraic Equation (DAE) examples
+[[example]]
+name = "dae_01_amplifier"
+path = "examples/dae/01_amplifier/main.rs"
+
+[[example]]
+name = "dae_02_robertson"
+path = "examples/dae/02_robertson/main.rs"
+
 # Stochastic Differential Equation (SDE) examples
 [[example]]
 name = "sde_01_brownian_motion"
