--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,12 +31,14 @@ exclude = [
 [features]
 default = []
 polars = ["dep:polars"]
+serde = ["dep:serde"]
 
 [dependencies]
 nalgebra = "^0.34.0" # Linear algebra library for matrix operations
 num-complex = "^0.4.6" # Complex number support
 differential-equations-derive = "0.1.3" # Derives State trait on structs
 polars = { version = "^0.47.1", optional = true } # DataFrame integration for the solution
+serde = { version = "1.0.228", features = ["derive"], optional = true } # solution serialization/deserialization
 
 [dev-dependencies]
 quill = "0.2.0" # Plotting for examples
